set min and max height on normal / large screens and set max-height on small screens / mobiles to make sure scrollbar appears and make design a bit better

--- a/client/vite-project/src/components/user-profile/UserProfile.module.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.module.scss
@@ -83,7 +83,8 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
-    height: 600px;
+    min-height: 400px;
+    max-height: 650px;
     overflow-y: scroll;
     max-width: 80%;
     margin: 0 auto;
@@ -186,6 +187,7 @@
     // Not perfect at all. Needs better responsive styles - especially for quotes__container element
     .quote__card__container {
         min-height: 300px;
+        max-height: 400px;
     }
 
     .profile__page__quote__card__container__heading {
